--- a/src/pages/layout/children/index.less
+++ b/src/pages/layout/children/index.less
@@ -1,5 +1,25 @@
-.header {
-  height: 64px;
+.MindMapHeader {
   width: 100%;
-  box-shadow: 0px 2px 0px #eaeaea;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  background: white;
+  .leftBox {
+    display: flex;
+    align-items: center;
+    .logo {
+      height: 40px;
+      width: 40px;
+      margin-left: 24px;
+    }
+    .siteTitle {
+      font-family: Inter;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 16px;
+      color: #000000;
+      margin-left: 14px;
+    }
+  }
 }
