--- a/src/pages/layout/index.less
+++ b/src/pages/layout/index.less
@@ -46,33 +46,33 @@
           width: 20px;
           height: 20px;
           display: inline-block;
-          background: url('./imgs/document-add.svg') center center;
+          background: url('../../assets/imgs/document-add.svg') center center;
           margin-right: 10px;
         }
         .menuIconMap {
           width: 22px;
           height: 20px;
           display: inline-block;
-          background: url('./imgs/blackMy.svg') center center;
+          background: url('../../assets/imgs/blackMy.svg') center center;
         }
         .menuIconTrash {
           width: 20px;
           height: 20px;
           display: inline-block;
-          background: url('./imgs/delete.svg') center center;
+          background: url('../../assets/imgs/delete.svg') center center;
         }
       }
       .itemMenu.active {
         background-color: #5452f6;
         color: white;
         .menuIconAdd {
-          background: url('./imgs/hover_menu1.svg') center center;
+          background: url('../../assets/imgs/hover_menu1.svg') center center;
         }
         .menuIconMap {
-          background: url('./imgs/My Mindmap.svg') center center;
+          background: url('../../assets/imgs/My Mindmap.svg') center center;
         }
         .menuIconTrash {
-          background: url('./imgs/hover_menu3.svg') center center;
+          background: url('../../assets/imgs/hover_menu3.svg') center center;
         }
       }
     }
