--- a/src/pages/layout/index.less
+++ b/src/pages/layout/index.less
@@ -21,6 +21,7 @@
       background-color: #ffffff;
       box-sizing: border-box;
       padding: 20px 16px 0;
+      border-right: 1px solid #eaeaea;
       .itemMenu {
         width: 208px;
         height: 40px;
@@ -41,7 +42,9 @@
           width: 40px;
           display: inline-block;
           padding-top: 2px;
+          font-size: 20px;
         }
+
         .menuIconAdd {
           width: 20px;
           height: 20px;
