--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: center;
     border: 1.5px dashed #c4c4ff;
+    transition: all 0.4s;
     &:hover {
       box-shadow: 0px 41px 70px rgba(84, 82, 246, 0.15);
     }
@@ -28,7 +29,7 @@
       .topTntro {
         color: #5452f6;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 23px;
         line-height: 25px;
         margin-bottom: 7px;
       }
