--- a/src/pages/layout/children/index.less
+++ b/src/pages/layout/children/index.less
@@ -9,9 +9,9 @@
     display: flex;
     align-items: center;
     .logo {
-      height: 40px;
-      width: 40px;
       margin-left: 24px;
+      font-size: 35px;
+      color: #5452f6;
     }
     .siteTitle {
       font-family: Inter;
