--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -4,8 +4,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   .importBtn {
-    margin-right: 80px;
+    // margin-right: 80px;
     width: 335px;
     height: 176px;
     border-radius: 32px;
@@ -41,7 +42,7 @@
     }
   }
   .appendBtn {
-    margin-right: 80px;
+    // margin-right: 80px;
     width: 335px;
     height: 176px;
     border-radius: 32px;
@@ -63,7 +64,7 @@
       .topTntro {
         color: #fff;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 23px;
         line-height: 25px;
         margin-bottom: 7px;
       }
