--- a/src/pages/layout/index.less
+++ b/src/pages/layout/index.less
@@ -17,7 +17,8 @@
     display: flex;
     .menu {
       height: 100%;
-      width: 250px;
+      width: 40%;
+      max-width: 250px;
       background-color: #ffffff;
       box-sizing: border-box;
       padding: 20px 16px 0;
